feat: add retry block for RGA call, some refactoring, plus a few more cleanups